[project]
name = "cry-classification-agent"
version = "0.1.0"
description = "婴儿哭声分类 Agent — 上传音频，Agent 自动推理哭声原因（饥饿/疼痛/困倦）"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "torch>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "streamlit>=1.28.0",
]

[project.scripts]
cry-agent = "src.main:cli"
